Adding Blitzy Project Guide: Project Status and Human Tasks Remaining